Closed Bug 1862437 Opened 11 months ago Closed 10 months ago

ATK's GetColumnRowSpanCB should not set the row extent to the col extent

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: jdiggs, Assigned: Jamie)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Looks like a C&P error that's been around a while....

https://hg.mozilla.org/mozilla-central/file/tip/accessible/atk/nsMaiInterfaceTableCell.cpp#l64

  *aColExtent = static_cast<gint>(cellAcc->ColExtent());
  *aRowExtent = static_cast<gint>(cellAcc->ColExtent());

One can get the spans separately as GetRowSpanCB is right, but getting them at once is preferable. Please and thank you. :)

Urgh. It looks like this has been around since this interface was implemented back in 2016. However, I think it got worse with bug 1821957 (Firefox 115). Before that, this bug only applied to content hosted in the parent process (Firefox UI). After that, it began to apply to (remote) web content as well.

Severity: -- → S3
Blocks: tablea11y

Previously, this incorrectly returned the row in the column field, the column in the row field, and the column span for both the row and column spans.

Assignee: nobody → jteh
Status: NEW → ASSIGNED
Depends on: 1862534
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cf0998094bd9 Return the correct data for ATK get_row_column_span. r=eeejay
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: