Bug 1862437: Return the correct data for ATK get_row_column_span. r=eeejay

Previously, this incorrectly returned the row in the column field, the column in the row field, and the column span for both the row and column spans.

Differential Revision: https://phabricator.services.mozilla.com/D192912